--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,11 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
+    <% if (user) { %>
+      <p>Welcome <-% user %> <a href="/logout">Logout</a> | <a href="/post">Post</a></p> 
+    <% } else { %>
+      <p>You are not logged in! <a href="/login">Login</a> | <a href="/signup">Sign Up</a></p>
+    <% } %>
     <p>Welcome to <%= title %></p>
   </body>
 </html>
