--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <% if (user) { %>
-      <p>Welcome <%= user %> <a href="/logout">Logout</a> | <a href="/post">Post</a></p> 
+      <p>Welcome <%= user %> <a href="/logout">Logout</a> | <a href="/newpost">New post</a></p> 
     <% } else { %>
       <p>You are not logged in! <a href="/login">Login</a> | <a href="/signup">Sign Up</a></p>
     <% } %>
