Added comments functionality

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -17,7 +17,7 @@
         <h2><%= title %></h2>
             Posted <%= date %><i> By <%= author %></i><br>
         <hr>
-        <%= body %>
+        <%- body %>
         <p>
         <em>Filed Under</em>
         <% for(let i = 0; i < tags.length-1; i++) { %>
